# llm-bawt

./: .dockerignore  .env.docker  .env.tenant.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.agent-bridge  Dockerfile.app  Dockerfile.bridge  Dockerfile.playwright  Makefile  README.md  check_db.py  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  main.py  playwright-gpu.config.json  pyproject.toml  requirements-test-webhook.txt  run.sh  server.sh  tenant.sh  test_extraction.py  test_nextcloud_send.py  test_profile.py  test_webhook.py
.githooks/: commit-msg  post-checkout  pre-commit
.github/: copilot-instructions.md
.github/agents/: Codex Implementer.agent.md
docs/: BACKGROUND_SCHEDULER.md  BOT_SETTINGS_DB_MIGRATION_PLAN.md  CLAUDE_CODE_BRIDGE.md  CLIENT_REFACTORING_PLAN.md  CODEX_BRIDGE.md  CONTEXT_AND_MEMORY_REDESIGN.md  HA_NATIVE_MCP_INTEGRATION.md  HISTORY_REFACTOR_PROGRESS.md  INTER_BOT_COMMUNICATION.md  MCP_SERVER.md  MEMORY.md  MODEL_ADAPTERS.md  NEXTCLOUD_INTEGRATION.md  OPENCLAW_GATEWAY_WS_SPEC.md  OPENCLAW_INTEGRATION.md  OPENCLAW_SESSION_BRIDGE_PLAN.md  README.md  SEARCH_PROVIDERS.md  TASK-266-garage-migration.md  TOOL_CALLING.md  VLLM_INTEGRATION.md  WEB_FETCH_INTEGRATION.md  approval-policies.md  echo-lan-bridge-runbook.md  openapi-responses-refactor.md  openclaw-gateway-refactor-handoff.md  openclaw-migration-agent-prompt.md  openclaw-wire-format.md  usage-endpoint.md
docs/claude-process-migration/: 01-migration-plan.md  02-poc-results.md  03-cache-comparison-correction.md  04-billing-and-token-scope.md  05-vscode-extension-investigation.md  HANDOFF.md  README.md  poc_cache_compare.py  poc_persistent_claude.py
docs/design/: turn-integrity.md
scripts/: backfill_avatar_render.py  bw-secret  cleanup_profile.py  poc_crawl4ai.py  prefix_sizes.py  probe_voice_latency.py  rebuild_profile.py  recursive_name_experiment.py  recursive_name_experiment.sh
src/: __init__.py
src/agent_bridge/: __init__.py  approval.py  events.py  publisher.py  session_queue.py  store.py  subscriber.py  tool_results.py
src/claude_code_bridge/: __init__.py  __main__.py  _bridge_helpers.py  approval_ops.py  bootstrap.py  bridge.py  command_ops.py  event_ops.py  send_handler.py  send_request.py  send_stream.py  send_usage.py  session_ops.py  tool_events.py  tool_policy.py
src/claude_code_bridge/proxy/: __init__.py  app.py  cache_diag.py  errors.py  heartbeat.py  routes.py  stream.py  translate.py  usage_capture.py
src/codex_bridge/: __init__.py  __main__.py  _bridge_helpers.py  bridge.py  command_ops.py  event_ops.py  exec_patch.py  local_plugins.py  parser_patch.py  session_ops.py  transport.py
src/llm_bawt/: approval_policies.py  bot_types.py  bots.py  bots.yaml  config_migrations.py  config_resolver.py  gguf_handler.py  main.py  memory_debug.py  model_catalog.py  model_manager.py  profiles.py  prompt_registry.py  runtime_setting_resolution.py  runtime_settings.py  setting_definitions.py
src/llm_bawt/adapters/: pygmalion.py  registry.py
src/llm_bawt/agent_backends/: __init__.py  agent_bridge.py  base.py  claude_code.py  codex.py  local_model.py  openclaw.py  prompts.py  registry.py
src/llm_bawt/cli/: __init__.py  _common.py  admin_cmd.py  app.py  bot_create.py  bot_editor.py  config_setup.py  config_wizard.py  display_cmd.py  main.py  openclaw_handler.py  parser.py  tool_render.py  vllm_handler.py
src/llm_bawt/clients/: __init__.py  agent_backend_client.py  base.py  grok_client.py  llama_cpp_client.py  openai_client.py  responses_client.py  vllm_client.py
src/llm_bawt/core/: __init__.py  base.py  client.py  effective_config.py  model_lifecycle.py  pipeline.py  prompt_builder.py  prompt_manifest.py  status.py
src/llm_bawt/integrations/: __init__.py  agent_bridge_events.py  agent_bridge_fanout.py  agent_bridge_store.py  openclaw_bridge.py  openclaw_events.py  openclaw_fanout.py  openclaw_ingest.py  openclaw_store.py  openclaw_ws.py
src/llm_bawt/mcp_server/: __init__.py  __main__.py  client.py  extraction.py  media_generation_tools.py  media_tools.py  recap_prompt.py  search_tools.py  self_tools.py  server.py  storage.py  task_tools.py
src/llm_bawt/media/: __init__.py  assets.py  avatar.py  db.py  object_store.py  schemas.py  serializers.py  storage.py  store.py
src/llm_bawt/memory/: __init__.py  base.py  consolidation.py  embeddings.py  maintenance.py  migrations.py  migrations_bot_model.py  migrations_media.py  migrations_memory.py  migrations_partition.py  migrations_session_backfill.py  (+6 more)
src/llmbothub/: __init__.py  bots.py  bots.yaml  gguf_handler.py  main.py  memory_debug.py  model_manager.py  profiles.py
src/local_model_bridge/: __init__.py  __main__.py  bridge.py  embed_server.py  inference.py  llama_cpp_client.py  vllm_client.py
src/openclaw_bridge/: __init__.py  __main__.py  bridge.py  config.py  events.py  gateway_http.py  ingest.py  metrics.py  publisher.py  session_queue.py  store.py  subscriber.py  ws_client.py
tests/: epic217_e2e_spec.md  epic217_harness.py  test_adapters.py  test_agent_bridge.py  test_agent_image_manifest.py  test_agent_prompt_tools.py  test_approval_bridge_gate.py  test_approval_engine.py  test_approval_persist.py  test_auto_title.py  test_avatar_animations.py  test_bot_profile_priority.py  test_brave_search.py  test_bridge_session_persistence.py  test_claude_bridge_bootstrap.py  test_claude_code_proxy.py  test_claude_tool_policy.py  test_cli_commands.py  test_codex_bridge_usage.py  test_codex_local_plugins.py  test_codex_models.py  test_concurrent_bot_streaming.py  test_context_budget.py  test_effective_config.py  test_global_search_policy.py  test_ha_native_mcp.py  test_history_attachments.py  test_history_context.py  test_history_summarization.py  test_home_tool_executor.py  test_instance_cache_local_mode.py  test_integration.py  test_mcp_task_tools_compact.py  test_mcp_tasks_semantic.py  test_media_gc.py  test_media_store.py  test_model_catalog.py  test_model_catalog_migration.py  test_model_catalog_routes.py  test_model_consolidation.py  (+34 more)
(+225 files in other folders)
