[project]
name = "llm-bawt"
version = "0.1.4"
description = "llm-bawt - Model-agnostic LLM platform providing a unified, OpenAI-compatible API for configurable chatbots and multi-agent systems across cloud and local models."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "rich>=13.9.4",
    "requests>=2.25.0",
    "pydantic-settings>=2.8.1",
    "openai>=1.69.0",
    "pyyaml>=6.0.2",
    "pytz>=2025.2",
    "tiktoken>=0.9.0",
    "click>=8.0.0",
    # PostgreSQL memory backend
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.31",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    # TUI
    "textual>=0.52.0",
    "textual-dev>=1.5.0",
    "pyperclip>=1.8.0",
    "ipython>=8.0.0",
    # OpenClaw WS bridge
    "websockets>=13.0",
    # Redis (shared agent-bridge transport: events, commands, fanout)
    "redis[hiredis]>=5.0.0",
    "anthropic>=0.84.0",
    "claude-agent-sdk>=0.1.56",
    "openai-codex-sdk>=0.1.11",
    # Image normalization for MediaStore (TASK-223): EXIF/ICC strip, downscale,
    # WebP encode. Pulled into the base set because the chat upload path is
    # always-on; not behind an optional extra.
    "pillow>=10.0.0",
    # S3-compatible object storage backend for MediaStore + MediaStorage
    # (TASK-266). Talks to self-hosted Garage by default. Import is lazy
    # (see object_store.py), so this dep stays out of the hot path when
    # LLM_BAWT_STORAGE_BACKEND=fs (the default).
    "boto3>=1.34.0",
    # Provider-connect credential store (encryption at rest) + GitHub App
    # installation-token JWT signing (RS256). Imports are lazy in
    # service/providers/*, so these stay out of the hot path until a provider
    # is connected.
    "cryptography>=42.0.0",
    "pyjwt[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "flask>=3.0.0",
    # In-memory S3 for TASK-266 object_store unit tests — exercises the
    # boto3 path without a live Garage. moto 5+ uses the unified
    # ``@mock_aws`` decorator.
    "moto[s3]>=5.0.0",
]
memory = [
    "sentence-transformers>=2.2.0",
]
huggingface = [
    "transformers>=4.35.0",
    "bitsandbytes>=0.42.0",
    "torch>=2.2.0",
    "accelerate>=0.29.0",
    "peft>=0.5.0",
    "xformers>=0.0.29.post1",
    "huggingface-hub"
]

llamacpp = [
    "llama-cpp-python",
]

vllm = [
    "vllm>=0.15.0",
]

service = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
]

mcp = [
    "mcp[cli]>=1.0.0",
]

search = [
    "ddgs>=7.0.0",  # DuckDuckGo search (free, no API key)
    "tavily-python>=0.5.0",  # Tavily search (production, API key required)
]


[project.scripts]
llm-bawt = "llm_bawt.main:main"
llm = "llm_bawt.main:main"
llm-bawt-service = "llm_bawt.service.server:main"
llm-service = "llm_bawt.service.server:main"
llm-memory = "llm_bawt.memory_debug:main"
llm-mcp-server = "llm_bawt.mcp_server:run_server"
llm-nextcloud = "llm_bawt.integrations.nextcloud.cli:nextcloud_cli"
openclaw-bridge = "openclaw_bridge.__main__:main"
claude-code-bridge = "claude_code_bridge.__main__:main"
codex-bridge = "codex_bridge.__main__:main"

[project.entry-points."llm_bawt.memory"]
postgresql = "llm_bawt.memory.postgresql:PostgreSQLMemoryBackend"

[project.entry-points."llm_bawt.agent_backends"]
openclaw = "llm_bawt.agent_backends.openclaw:OpenClawBackend"
claude-code = "llm_bawt.agent_backends.claude_code:ClaudeCodeBackend"
codex = "llm_bawt.agent_backends.codex:CodexBackend"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
llm_bawt = ["*.yaml"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Collection is scoped to tests/ and live-system tests are excluded by default.
# A bare `pytest` / `pytest tests/` runs ONLY hermetic unit tests — nothing that
# touches the live service or real bots. Opt in explicitly to run the gated ones:
#   uv run pytest -m service        # CLI/integration tests vs a running :8642
#   uv run pytest -m llm_call       # tests that spend real LLM credits
# Intentional live smoke tools live OUTSIDE tests/ (e.g. scripts/smoke/) so they
# are never auto-collected — run them by explicit path only.
testpaths = ["tests"]
addopts = "-m 'not service and not llm_call and not integration'"
markers = [
    "service: requires the llm-bawt service running at :8642",
    "llm_call: makes real LLM API calls (slow, uses API credits)",
    "integration: shells out to real CLI entrypoints / live DB — not hermetic",
]
